argocd/bento-pdf/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bentopdf
  name: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bentopdf
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: bentopdf
    spec:
      containers:
        - image: harbor.yanello.net/ghcr/alam00000/bentopdf:2.8.8@sha256:6ef493c8e3bdbaa26c9bfcec330377ae95116fa00660ca0342769063197b1952
          imagePullPolicy: IfNotPresent
          name: bentopdf
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 25m
              memory: 50Mi
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
