argocd/bento-pdf/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bentopdf
  name: bentopdf
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: bentopdf
